--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>PR testing</h1>
         <p>testing start here~~</p>
         <p>JONY TEST 增加了這句話</p>
-        <p>Peter 新增了一個P標籤</p>
+
+        <h2>我是H2</h2>
     </body>
 </html>
